🐛 FIX: fix fix spacing

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -786,6 +786,12 @@ html {
 .pb-20 {
   padding-bottom: 5rem;
 }
+.pb-28 {
+  padding-bottom: 7rem;
+}
+.pb-24 {
+  padding-bottom: 6rem;
+}
 .text-left {
   text-align: left;
 }
